// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redirect correctly 1`] = `
<div
  noThrow={true}
  to="/"
>
  Redirect - 
</div>
`;

exports[`renders correctly 1`] = `
<div
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
  <div>
    render - 
    <div
      className="Component-root-83"
    >
      <div
        className="Component-header-81"
      />
      <div
        className="Component-container-78"
      >
        <div
          style={
            Object {
              "textDecoration": "none",
            }
          }
          to="/"
        >
          Link - 
          <img
            alt="Prizey"
            className="Component-logoImage-82"
            src="/logo.png"
          />
        </div>
        <div
          className="Component-caption-76"
        />
        <div
          className="Component-children-77"
        >
          <h5
            className="MuiTypography-root-32 MuiTypography-h5-48 MuiTypography-alignCenter-55 Component-pageTitle-75"
          >
            Create your account!
          </h5>
          <div
            renderButton={[Function]}
          >
            SignUp - 
            <button
              className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 MuiButton-fullWidth-28"
              disabled={false}
              onBlur={[Function]}
              onContextMenu={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              renderButton={[Function]}
              tabIndex="0"
              type="button"
            >
              <span
                className="MuiButton-label-4"
              >
                REGISTER
              </span>
              <span
                className="MuiTouchRipple-root-68"
              />
            </button>
            <p
              className="MuiTypography-root-32 MuiTypography-body1-41 MuiTypography-alignCenter-55 Component-message-2"
            >
              By proceeding, you agree you're 18+.
            </p>
            <div
              className="Component-links-1"
            >
              <div
                style={
                  Object {
                    "textDecoration": "none",
                  }
                }
                to="/sign-in"
              >
                Link - 
                <span
                  className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorPrimary-62"
                >
                  Already have an account?
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="Component-footer-79"
        >
          <a
            className="Component-footerLink-80"
            href="https://app.termly.io/document/terms-and-conditions/4de5f3bb-a333-47bb-9daf-f82f7d4e1cfb"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorTextSecondary-65 MuiTypography-alignCenter-55"
            >
              TERMS
            </span>
          </a>
          <a
            className="Component-footerLink-80"
            href="https://app.termly.io/document/privacy-policy/8192f107-a2dc-4548-bf83-97907c6d83c3"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorTextSecondary-65 MuiTypography-alignCenter-55"
            >
              PRIVACY
            </span>
          </a>
          <a
            className="Component-footerLink-80"
            href="https://termly.io/en/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorTextSecondary-65 MuiTypography-alignCenter-55"
            >
              FAIRNESS
            </span>
          </a>
          <a
            className="Component-footerLink-80"
            href="/all-prizes"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorTextSecondary-65 MuiTypography-alignCenter-55"
            >
              ALL PRIZES
            </span>
          </a>
        </div>
      </div>
    </div>
  </div>
  <div>
    renderCreated - 
    <div
      noThrow={true}
      to="/"
    >
      Redirect - 
    </div>
  </div>
</div>
`;

exports[`renders the form correctly 1`] = `
Array [
  <button
    className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 MuiButton-fullWidth-28"
    disabled={false}
    onBlur={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-4"
    >
      REGISTER
    </span>
    <span
      className="MuiTouchRipple-root-68"
    />
  </button>,
  <p
    className="MuiTypography-root-32 MuiTypography-body1-41 MuiTypography-alignCenter-55 Component-message-2"
  >
    By proceeding, you agree you're 18+.
  </p>,
  <div
    className="Component-links-1"
  >
    <div
      style={
        Object {
          "textDecoration": "none",
        }
      }
      to="/sign-in"
    >
      Link - 
      <span
        className="MuiTypography-root-32 MuiTypography-caption-42 MuiTypography-colorPrimary-62"
      >
        Already have an account?
      </span>
    </div>
  </div>,
]
`;
